--- a/Never-Gonna-Let-You-Browse-Extension/manifest.json
+++ b/Never-Gonna-Let-You-Browse-Extension/manifest.json
@@ -5,7 +5,7 @@
     "manifest_version": 3,
     "content_scripts": [
         {
-          "js": ["scripts/content.js"],
+          "js": ["scripts/content_clicklink.js"],
           "matches": ["https://*/*"]
         }
     ]
