added store permissions

--- a/Never-Gonna-Let-You-Browse-Extension/manifest.json
+++ b/Never-Gonna-Let-You-Browse-Extension/manifest.json
@@ -8,5 +8,6 @@
           "js": ["scripts/content_clicklink.js"],
           "matches": ["https://*/*"]
         }
-    ]
+    ],
+    "permissions": ["storage"]
   }
