--- a/Never-Gonna-Let-You-Browse-Extension/manifest.json
+++ b/Never-Gonna-Let-You-Browse-Extension/manifest.json
@@ -7,6 +7,10 @@
         {
           "js": ["scripts/redirect_link.js"],
           "matches": ["https://*/*"]
+        },
+        {
+          "js": ["scripts/change_image.js"],
+          "matches": ["https://*/*"]
         }
     ],
     "background": {
